--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,318 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.main{
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  padding: 120px 0px;
+}
+.filtersection{
+  max-width: 300px;
+  width: 100%;
+  margin-right: 50px;
+  
+}
+.mainproduct{
+  display: flex;
+
+  gap: 30px;
+  flex-wrap: wrap;
+}
+.products{
+  max-width: 265px;
+  width: 100%;
+}
+.products img {
+  max-width: 300px;
+  width: 100%;
+  margin: 0 auto;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.mainproduct a {
+  text-decoration: none;
+  color: #000;
+  text-transform: capitalize;
+  font-size: 18px;
+  letter-spacing: 0.3px;
+  font-weight: 600;
+}
+
+.mainproduct a span{
+  display: flex;
+  justify-content: space-between;
+  padding: 0px 20px;
+  align-items: center;
+}
+
+.serchproduct form input{
+  width: 100%;
+  outline: none;
+  padding: 12px;
+  font-size: 16px;
+  color: #000;
+  font-weight: 500;
+  border-radius: 25px;
+  border: 2px solid #c4c4c4;
+}
+
+.categorybtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 10px;
+  gap: 10px;
+  font-size: 22px;
+}
+
+.categorybtn button{
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+  color: #000;
+  width: 100%;
+  text-align: left;
+  text-transform: capitalize;
+}
+.categorybtn button:focus-visible{
+  outline: none;
+  box-shadow: none;
+}
+h5{
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+.colors button{
+ border: none;
+ outline: none;
+ border-radius: 50%;
+ width: 25px; 
+ height: 25px;
+ margin: 0px 5px;
+ cursor: pointer; 
+ display: flex;
+ color: #fff;
+ align-items: center;
+ justify-content: center;
+}
+input[type="range"]{
+  cursor: pointer;
+}
+
+.clearfilter button{
+  padding: 10px;
+  background-color: teal;
+  color: #fff;
+  font-size: 16px;
+  text-transform: capitalize;
+  border: none;
+  margin-top: 20px;
+  cursor: pointer;
+
+}
+
+.sorting {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 50px;
+}
+select {
+  padding: 8px;
+  font-size: 16px;
+  font-weight: 500;
+  outline: none;
+}
+
+.cart{
+  display: flex;
+  gap: 20px;
+  padding: 30px 0px;
+
+}
+
+.cart input {
+  outline: none;
+  border: none;
+  width: 50px;
+  text-align: center;
+  font-size: 25px;
+  color: rgb(98 84 243);
+}
+.input button{
+  background-color: transparent;
+  font-size: 28px;
+  box-shadow: none;
+  font-weight: 500;
+  cursor: pointer;
+  border: none;
+}
+.main1{
+  display: flex;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 40px 0px;
+}
+
+.addtocart {
+  background-color: rgb(98 84 243);
+  color: rgb(255 255 255);
+  font-weight: 400;
+  font-size: 18px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  padding: 8px 17px;
+  text-transform: capitalize;
+}
+
+.column img{
+  max-width: 100px;
+  width: 100%;
+  cursor: pointer;
+}
+
+.mainimgproduct img{
+  max-width: 350px;
+  width: 100%;
+}
+
+.mainimg {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.column{
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  padding-top: 30px;
+}
+
+.productcontent {
+  max-width: 700px;
+  width: 100%;
+  padding-left: 70px;
+}
+
+.btnStyle{
+  border: none; 
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+}
+.colors{
+  display: flex;
+}
+
+.cartpage{
+  max-width: 1000px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 100px 0px;
+}
+.fieldname{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+.fieldname h6{
+  color: #000;
+  text-transform: capitalize;
+  font-size: 20px;
+  line-height: 40px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+}
+.fieldname{
+  border-bottom: 2px solid #c4c4c4;
+}
+
+
+.productsdata{
+  max-width: 100%;
+  padding: 30px  0px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.productsdata .product{
+  max-width: 180px;
+  width: 100%;
+}
+
+.productsdata .product img {
+  max-width: 150px;
+  width: 100%;
+  height: auto;
+}
+
+.productbody h6 {
+  margin: 5px 0px;
+  font-size: 16px;
+  text-transform: capitalize;
+}
+
+.productbody span{
+  width: 18px;
+  height: 19px;
+  display: inline-block;
+  border-radius: 50%;
+}
+
+.colorcart{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.productsdata .product{
+  max-width: 200px;
+  width: 100%;
+}
+
+button.remove{
+  cursor: pointer;
+  color: red;
+  font-size: 25px;
+  border: none;
+  outline: none;
+  box-shadow: none;
+  background-color: transparent;
+}
+
+
+.removealldata {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.maincart button,
+.removealldata button{
+  border: none;
+  padding: 12px;
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+}
+.maincart button,
+.removealldata button:first-child{
+  background-color: rgb(98 84 243);
+  
+}
+
+.removealldata button.removeall{
+  background-color: red;
+}
+
+.maincart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 95vh;
 }
